@@ -1,6 +1,6 @@
-# Colorifer
+# Colorifier
 
-Colorifer is a code highlighting tool for [Lovely.IO](http://lovely.io)
+Colorifier is a code highlighting tool for [Lovely.IO](http://lovely.io)
 
 By default it doesn't require any configuration, just include the script on
 your page, or hook it up with `Lovely`. Once the document body is loaded it
@@ -18,14 +18,14 @@ will automatically search for things like that
 There are a bunch of options you might change if you like
 
     :javascript
-    Lovely(['colorifer'], function(Colorifer) {
-      Colorifer.Options.tag  = 'pre'; // the tag name of the target elements
-      Colorifer.Options.attr = 'data-lang'; // the attribute with language
-      Colorifer.Options.scheme = 'default'; // the color scheme to use
-      Colorifer.Options.gutter = true;      // show/hide the gutter
+    Lovely(['colorifier'], function(Colorifier) {
+      Colorifier.Options.tag    = 'pre';       // the tag name of the target elements
+      Colorifier.Options.attr   = 'data-lang'; // the attribute with language
+      Colorifier.Options.scheme = 'default';   // the color scheme to use
+      Colorifier.Options.gutter = true;        // show/hide the gutter
     });
 
-You also can initialize colorifer at any moment with the `Colorifer.initialize()` call
+You also can initialize colorifier at any moment with the `Colorifier.initialize()` call
 
 
 ## Copyright And License
