@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Colorifer Demo</title>
+    <title>Colorifier Demo</title>
     <link href="/shared.css" rel="stylesheet" type="text/css" />
     <script src="/core.js"></script>
     <script type="text/javascript">
-      Lovely(["colorifer"], function() {
+      Lovely(["colorifier"], function() {
 
       });
     </script>
   </head>
   <body>
-    <h1>Colorifer Demo</h1>
+    <h1>Colorifier Demo</h1>
 
     <h2>JavaScript</h2>
 <pre data-lang="javascript">
