@@ -1,10 +1,10 @@
 {
-  "name":        "colorifer",
+  "name":        "colorifier",
   "version":     "1.0.0",
   "description": "Code highlighting script",
   "author":      "Nikolay Nemshilov",
   "license":     "MIT",
-  "home_url":    "https://github.com/MadRabbit/colorifer",
+  "home_url":    "https://github.com/MadRabbit/colorifier",
   "dependencies": {
     "dom": "1.0.0"
   }
