@@ -3,7 +3,7 @@
 #
 # Copyright (C) 2011 Nikolay Nemshilov
 #
-Colorifer.js = Colorifer.javascript = new Class Colorifer,
+Colorifier.js = Colorifier.javascript = new Class Colorifier,
 
   comments: "/* */,//"
   keywords: "function,return,for,if,else,while,do,throw,try,catch,instanceof"
